[gd_scene load_steps=6 format=3 uid="uid://ctkbps8l4pw6u"]

[ext_resource type="Script" path="res://clickable_die.gd" id="1_3xkko"]
[ext_resource type="Texture2D" uid="uid://o1xm76qu6h8h" path="res://DicePNGs/white/unknown-die.png" id="2_3b5f2"]
[ext_resource type="LabelSettings" uid="uid://b6vgp8o1pg4rg" path="res://TextSettings/default_label.tres" id="3_jxxxj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wugpb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sf4aa"]

[node name="ClickableDie" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3xkko")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wugpb")
theme_override_styles/hover = SubResource("StyleBoxFlat_wugpb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wugpb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sf4aa")
flat = true

[node name="VerticalContainer" type="VBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Button/VerticalContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_3b5f2")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Button/VerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "TEMP"
label_settings = ExtResource("3_jxxxj")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
